<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.lokray</groupId>
    <artifactId>nebulac</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>llvm</artifactId>
            <version>20.1.7-1.5.12</version>
        </dependency>

        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>llvm-platform</artifactId>
            <version>20.1.7-1.5.12</version>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>4.13.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>linux-native-build</id>
            <activation>
                <property>
                    <name>javacpp.platform</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.bytedeco</groupId>
                    <artifactId>llvm</artifactId>
                    <version>20.1.7-1.5.12</version>
                    <classifier>${javacpp.platform}</classifier>
                </dependency>
                <dependency>
                    <groupId>org.bytedeco</groupId>
                    <artifactId>javacpp</artifactId>
                    <version>1.5.12</version>
                    <classifier>${javacpp.platform}</classifier>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>4.13.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <outputDirectory>src/main/java/org/lokray/parser</outputDirectory>
                    <listener>true</listener>
                    <visitor>true</visitor>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>0.10.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>org.lokray.Main</mainClass>
                    <imageName>nebula</imageName>
                    <buildArgs>
                        <!-- Instruct GraalVM Native Image to load configurations from the 'graalvm-config' directory inside target/classes -->
                        <buildArg>-H:ConfigurationResourceRoots=${project.build.outputDirectory}/META-INF/native-image/org/lokray</buildArg>
                        <buildArg>--report-unsupported-elements-at-runtime</buildArg>
                        <buildArg>-H:MaximumInliningSize=10</buildArg>
                        <buildArg>-Dgraal.PrintCompilation=true</buildArg>
                    </buildArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
